# ai-engineering-notes

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
0-set-up/: main.py  setup.md
1-ingestion/: adzuna.ipynb  ingestion.md
experiment-chunking/: chunking.py  eval_chunk_1000_833.json  eval_chunk_300_250.json  eval_chunk_600_500.json  evaluate_chunking_size.md  extract_text_from_pdf.ipynb  generate_gt.ipynb  generated_questions_chap4.csv  judge.ipynb  judge.py  rag-responses-test.ipynb  rag.ipynb  rag.py  rag_results_1000_833.json  rag_results_300_250.json  rag_results_600_500.json  sample_gt.csv  test.ipynb  utils.py
