[project]
name = "ai-engineering-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.0.7",
    "numpy>=2.3.5",
    "openai>=2.13.0",
    "pdfplumber>=0.11.8",
    "psycopg>=3.3.2",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "toyaikit>=0.0.8",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
